update about and fix margin on mobile

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -96,7 +96,8 @@
 
     @media only screen and (max-width: 600px) {
     .page {
-        margin-left: 1vw;
+        margin-left: 2vw;
+        margin-right: 2vw;
         margin-top: 5vh;
     }
     }
